z-index fix

--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ body {
 }
 
 header {
+  z-index: 1;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -171,6 +172,7 @@ footer #border-slide {
 }
 
 footer {
+  z-index: 1;
   position: fixed;
   width: 100%;
   bottom: 0;
